2008-07-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: couple of syntax fixes from Mikhail Gusarov

2008-07-03  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.8.2
	  ------------------------

2008-07-03  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.8.2
	* NEWS: Added 0.9.8.2
	* s3cmd: Print version info on 'unexpected error' output.

2008-06-30  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Re-upload when Amazon doesn't send ETag
	  in PUT response. It happens from time to time for
	  unknown reasons. Thanks "Burtc" for report and
	  "hermzz" for fix.

2008-06-27  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.8.1
	  ------------------------

2008-06-27  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.8.1
	* NEWS: Added 0.9.8.1
	* s3cmd: make 'cfg' global
	* run-tests.sh: Sort-of testsuite

2008-06-23  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.8
	  ----------------------

2008-06-23  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.8
	* NEWS: Added 0.9.8
	* TODO: Removed completed tasks

2008-06-23  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Last-minute compatibility fixes for Python 2.4
	* s3cmd, s3cmd.1: --debug-exclude is an alias for --debug-syncmatch
	* s3cmd: Don't require $HOME env variable to be set.
	  Fixes #2000133
	* s3cmd: Wrapped all execution in a try/except block
	  to catch all exceptions and ask for a report.

2008-06-18  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Version 0.9.8-rc3

2008-06-18  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Bucket name can't contain upper-case letters (S3/DNS limitation).

2008-06-12  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Version 0.9.8-rc2

2008-06-12  Michal Ludvig  <michal@logix.cz>

	* s3cmd, s3cmd.1: Added GLOB (shell-style wildcard) exclude, renamed
	  orig regexp-style --exclude to --rexclude

2008-06-11  Michal Ludvig  <michal@logix.cz>
